[QA]1.Create-QA-server: add debug breakpoint.

--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -124,6 +124,8 @@
          style="background-color: rgb(252, 245, 224); box-shadow: 0 2px 2px 0 rgba(0, 255, 255, .14), 0 3px 1px -2px rgba(0, 255, 255, .2), 0 1px 5px 0 rgba(0, 255, 255, .12)">
       <form name="comments" role="form" data-toggle="validator" method="post" action="/comments">
         <h4><p class="text-center" style="font-weight: 900;">
+          <% require 'pry'
+          binding.pry %>
           <%= "#{@view.running_on_qa? ? 'QA-' : ''}Have a question?" %><p></h4>
         <br>
         <div class="form-group">
