--- a/app/views/pages/add_to_slack.html.erb
+++ b/app/views/pages/add_to_slack.html.erb
@@ -30,7 +30,9 @@
           <%= "#{@view.running_on_qa? ? 'QA-' : ''}MiaDo" %>
         </a>
     </h1>
-    <p><%= "@controller.request.domain:" %><br><%= "#{@view.controller.request.domain}" %></p>
+    <p><%= "@controller.request.domain:" %><br><%= "#{@view.controller.request.domain}" %><br>
+      <%= "@controller.request.subdomain:" %><br><%= "#{@view.controller.request.subdomain}" %>
+    </p>
     <%= image_tag 'dog_head_icon.png', class: 'img-rounded img-responsive center-block',
         size: '100x100' %>
     <h3>Simple Task Management in Slack</h3>
