--- a/app/views/channels/admin_views/_index_channel_recent_activity.html.erb
+++ b/app/views/channels/admin_views/_index_channel_recent_activity.html.erb
@@ -1,4 +1,7 @@
 <% channel = locals[:channel]
+   member = locals[:member]
+   chan_name_creator = "#{channel.slack_channel_name} - #{member.slack_user_name}" unless member.nil?
+   chan_name_creator = "#{channel.slack_channel_name} - *member?*" if member.nil?
    if locals[:items].empty?
      description = '*no activity*'
    elsif channel.last_activity_type.nil?
@@ -17,7 +20,7 @@
 %>
 
 <tr>
-  <td><%= "#{channel.slack_channel_name} - #{locals[:member].slack_user_name}" %><br>(<%= channel.id %>)</td>
+  <td><%= chan_name_creator %><br>(<%= channel.id %>)</td>
   <td><%= channel.last_activity_type %>
     <br>@<%= channel.last_activity_date.nil? ? 'none' : channel.last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= description %></td>
