--- a/app/views/layouts/_page_header_navbar_admin_links.html.erb
+++ b/app/views/layouts/_page_header_navbar_admin_links.html.erb
@@ -6,4 +6,5 @@
   <%= link_to "Channels", channels_path, class: "btn btn-link" %>
   <%= link_to "Task Lists", items_path, class: "btn btn-link" %>
   <%= link_to "Activity", channels_path, class: "btn btn-link" %>
+  <%= link_to "Install-info", installations_path(options: 'info'), class: "btn btn-link" %>
 </div>
