[WIP]QA-2.Fixes-and-features: Update admin reports with changes in Model methods.

--- a/app/views/channels/admin_views/_index.html.erb
+++ b/app/views/channels/admin_views/_index.html.erb
@@ -12,7 +12,7 @@
     <% locals[:teams].each do |installation| %>
       <%= render partial: 'channels/admin_views/index_team',
                  locals: { locals: { team: installation,
-                                     shared_channels: Channel.shared_team_channels(slack_team_id: installation.slack_team_id),
+                                     shared_channels: Installation.shared_team_channels(slack_team_id: installation.slack_team_id),
                                    }
                          }
       %>
