--- a/app/views/channels/admin_views/_index_team.html.erb
+++ b/app/views/channels/admin_views/_index_team.html.erb
@@ -23,7 +23,7 @@
                                                                        slack_channel_id: channel.slack_channel_id),
                                        member: Member.find_from(source: :slack,
                                                                 slack_user_id: channel.slack_user_id,
-                                                                slack_team_id: channel.slack_team_id).first
+                                                                slack_team_id: channel.slack_team_id)
                                      }
                            }
         %>
@@ -50,7 +50,7 @@
                                                                        slack_channel_id: channel.slack_channel_id),
                                        member: Member.find_from(source: :slack,
                                                                 slack_user_id: channel.slack_user_id,
-                                                                slack_team_id: channel.slack_team_id).first
+                                                                slack_team_id: channel.slack_team_id)
                                      }
                            }
         %>
