--- a/app/views/teams/admin_views/_index.html.erb
+++ b/app/views/teams/admin_views/_index.html.erb
@@ -13,8 +13,8 @@
                  locals: { locals: { team: installation,
                                      members: Member.team_members(slack_user_id: installation.slack_user_id,
                                                                   slack_team_id: installation.slack_team_id),
-                                     channels: Channel.team_channels(slack_team_id: installation.slack_team_id),
-                                     lists: Channel.team_lists(slack_team_id: installation.slack_team_id),
+                                     channels: Installation.team_channels(slack_team_id: installation.slack_team_id),
+                                     lists: Installation.team_lists(slack_team_id: installation.slack_team_id),
                                      installations: Installation.installations(slack_team_id: installation.slack_team_id),
                                      auth_info: installation.auth_json['info'],
                                      auth_extra: installation.auth_json['extra'],
