--- a/app/views/installations/admin_views/_index_install_info.html.erb
+++ b/app/views/installations/admin_views/_index_install_info.html.erb
@@ -1,12 +1,14 @@
 <header class="css-body-header">
   <%= render partial: 'shared/index_page_header',
-             locals: { locals: { title: 'Admin Dashboard - Install Info' } }
+             locals: { locals: { title: "Install info: #{locals[:total_installations]} installations of #{locals[:bot_info][:name]}. #{locals[:teams].length} teams",
+                                 pagination_collection: locals[:installations]
+                               }
+                     }
   %>
 </header>
 
 <main class="css-body-main">
   <div class="container">
-    <h2>Install info for <%= " (#{locals[:installations].length}) installation of #{locals[:bot_info][:name]} for (#{locals[:teams].length}) " %>teams</h2>
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
