[QA]-3.Onboarding: drop beta from the welcome_add_to_slack page.

--- a/app/views/pages/welcome_add_to_slack_new.html.erb
+++ b/app/views/pages/welcome_add_to_slack_new.html.erb
@@ -52,9 +52,9 @@
           </p>
           <br>
           <br>
-          <h5>MiaDo is beta software, so please let us know
+          <h5>MiaDo is evolving, so please let us know
             <a href="/add_to_slack#contact_us"><u>here</u></a>
-            if you see any problems!</h5>
+            if you see any problems or have suggestions.</h5>
 
        </center>
      </div>
