[PROD].Admin-fixes: Fix last activity, reformat installation, team index views.

--- a/app/views/installations/admin_views/_index_installation_team.html.erb
+++ b/app/views/installations/admin_views/_index_installation_team.html.erb
@@ -1,18 +1,71 @@
-<tr>
-  <td><u><%= link_to locals[:auth_info]['team'],
-              installation_path(locals[:installation]),
-              title: "" %>
-      </u>
-      <br>(<%= locals[:installation].id %>)
-  </td>
-  <td><u><%= link_to locals[:auth_info]['user'],
-              installation_path(locals[:installation]),
-              title: "" %>
-      </u>
-      <br>@<%= locals[:installation].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>
-      <br>*<%= locals[:installation].updated_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>
-      <br>[<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>]
-  </td>
-  <td><%= locals[:installation].slack_user_api_token %></td>
-  <td><%= locals[:installation].bot_api_token %></td>
-</tr>
+<% last_activity = '*none*' if locals[:last_activity].nil?
+   last_activity = locals[:last_activity].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_activity].nil?
+%>
+<div class="row text-left" style="padding: 0px; margin: 0px;">
+  <div class="col-sm-12">
+    <h3><u><%= link_to locals[:auth_info]['team'],
+                       installation_path(locals[:installation]),
+               title: "" %></u>
+      &nbsp;&nbsp;Db recId: <%= locals[:installation].id %>.
+      &nbsp;&nbsp;Installed by:&nbsp;
+      <u><%= link_to locals[:auth_info]['user'],
+                     installation_path(locals[:installation]),
+             title: "" %></u>
+    </h3>
+  </div>
+</div>
+
+<div class="row text-left">
+  <div class="col-sm-12">
+    <div class="col-sm-2">
+      <h4>Installed On:</h4>
+    </div>
+     <div class="col-sm-10" style="padding-top: 0px;">
+       <h5><%= locals[:installation].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></h5>
+    </div>
+  </div>
+</div>
+
+<div class="row text-left">
+  <div class="col-sm-12">
+    <div class="col-sm-2">
+      <h4>Last Activity at:</h4>
+    </div>
+     <div class="col-sm-10" style="padding-top: 0px;">
+       <h5><%= last_activity %></h5>
+    </div>
+  </div>
+</div>
+
+<div class="row text-left">
+  <div class="col-sm-12">
+    <div class="col-sm-2">
+      <h4>Current Time:</h4>
+    </div>
+     <div class="col-sm-10" style="padding-top: 0px;">
+       <h5><%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT')  %></h5>
+    </div>
+  </div>
+</div>
+
+<div class="row text-left">
+  <div class="col-sm-12">
+    <div class="col-sm-2">
+      <h4>Api User Token:</h4>
+    </div>
+     <div class="col-sm-10" style="padding-top: 0px;">
+       <h5><%= locals[:installation].slack_user_api_token %></h5>
+    </div>
+  </div>
+</div>
+
+<div class="row text-left">
+  <div class="col-sm-12">
+    <div class="col-sm-2">
+      <h4>Api Bot Token:</h4>
+    </div>
+     <div class="col-sm-10" style="padding-top: 0px;">
+       <h5><%= locals[:installation].bot_api_token %></h5>
+    </div>
+  </div>
+</div>
