--- a/app/views/teams/admin_views/_show_team.html.erb
+++ b/app/views/teams/admin_views/_show_team.html.erb
@@ -81,7 +81,7 @@
 <div class="row text-left">
   <div class="col-sm-12">
     <div class="col-sm-3">
-      <h4><u><%= link_to 'Active Channels', team_channels_path(locals[:team]) %></u>
+      <h4><u><%= link_to 'Channels', team_channels_path(locals[:team]) %></u>
              <%= " (#{locals[:channels].length})" %>:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
