--- a/app/views/installations/admin_views/_index_installation_team.html.erb
+++ b/app/views/installations/admin_views/_index_installation_team.html.erb
@@ -1,6 +1,3 @@
-<% last_activity = '*none*' if locals[:last_activity].nil?
-   last_activity = locals[:last_activity].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_activity].nil?
-%>
 <div class="row text-left" style="padding: 0px; margin: 0px;">
   <div class="col-sm-12">
     <h3><u><%= link_to locals[:auth_info]['team'],
@@ -32,7 +29,11 @@
       <h4>Last Activity at:</h4>
     </div>
      <div class="col-sm-10" style="padding-top: 0px;">
-       <h5><%= last_activity %></h5>
+       <h5><%= locals[:installation].last_activity_date
+                                    .in_time_zone("Pacific Time (US & Canada)")
+                                    .strftime('%a %B %e, %Y %l:%M%P - PT') %>
+          &nbsp;(<%= locals[:installation].last_activity_type %>)                          
+      </h5>
     </div>
   </div>
 </div>
