--- a/app/views/users/admin_views/_index.html.erb
+++ b/app/views/users/admin_views/_index.html.erb
@@ -26,7 +26,7 @@
                      locals: { locals: { user: user,
                                          installations: [], # locals[:installations],
                                          teams: [], # locals[:teams],
-                                         last_activity: Channel.last_activity(user: user)
+                                         last_active: Channel.last_active(user: user)
                                        }
                              }
           %>
